# Trouter-for-Agent-Command

./: LICENSE  Makefile  README.md  pyproject.toml
agents/: swarm-router.md
agents/swarm/: codex-standard.md
etc/: cursor_config.json  routing-rules.yaml
tests/: conftest.py  test_config.py  test_dispatch.py  test_heartbeat.py  test_pool.py  test_remediation.py  test_session_stats.py  test_tui_app.py  test_tui_widgets.py
trouter/: __init__.py
trouter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
trouter/cli/: __init__.py  main.py
trouter/core/: __init__.py  config.py  dispatch.py  models.py  pool.py  router.py
trouter/discovery/: __init__.py  iterm_client.py  session_client.py  session_discovery.py
trouter/health/: __init__.py  daemon.py  heartbeat.py  remediation.py
trouter/hooks/: __init__.py  heartbeat_writer.py  hook_common.py  session_stats.py  usage_tracker.py
trouter/orchestration/: __init__.py  config.py  dispatcher.py
trouter/security/: __init__.py  egress_monitor.py  prompt_guard.py
trouter/shell/: __init__.py  cursor_agent.sh  cursor_env.sh
trouter/tui/: __init__.py  app.py  keybindings.py  themes.py
trouter/tui/screens/: __init__.py  agent_detail.py  dashboard.py  stats.py
trouter/tui/widgets/: __init__.py  agent_card.py  agent_grid.py  command_palette.py  dispatch_log.py  health_bar.py  pool_panel.py  stats_panel.py  watchdog_panel.py
