[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trouter"
version = "0.1.0"
description = "Agent Command Center — orchestrate, monitor, and visualize AI coding agent teams"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Mukshud Ahamed"}]
dependencies = [
    "textual>=0.47.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-textual-snapshot>=0.4.0",
    "ruff>=0.1.0",
]
api = [
    "requests>=2.28.0",
]

[project.scripts]
trouter = "trouter.cli.main:app"
trouter-dashboard = "trouter.tui.app:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["trouter*"]

[tool.ruff]
line-length = 100
target-version = "py310"
